   * Made usb-moded-dev dependency optional
   * Made sysinfo dependency optional
   * Use pkgconfig with qmake
   * Make bmeipc dependency optional
   * Fix a deprecated location for posedata.h in QmOrientation
   * Made mce dependency optional
   * Test each cabc mode separately
   * Fix cabc test
   * Fixes: NB#211192 - QmLocks makes blocking dbus calls
   * Remove sysfs-watcher

   [Tapio Rantala]
   * Proper package config file format

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 08 Dec 2010 08:55:43 +0200

qmsystem2 (0.0.10) unstable; urgency=low

  [Yang Yang]
  * Add time constraint for manual-usb-test:QmUSBMode::setMode()
  * Add check QmTime::setTimezone() if empty string, returns false without asking timed
  * Remove tests for deprecated functions in time-test, fix setTimezone test

  [Matias Muhonen]
  * Add manual-batterymon-test
  * Rename msystemdbus.h => msystemdbus_p.h and remove unused D-Bus interface declarations

  [Raimo Vuonnala]
  * Removed qmusbmode from Nokia Meego scope

  [Ilya Dogolazky]
  * Removed ':' before the time zone names

 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Fri, 03 Dec 2010 08:46:08 +0200

qmsystem2 (0.0.9) unstable; urgency=low

  [Yang Yang]
  * Add test error signal of qmusbmoded, open usbmod-test

  [Matias Muhonen]
  * Fixes: NB#207792 - MeeGo::QmUSBMode::setMode() may block for several seconds

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Wed, 24 Nov 2010 12:50:19 +0200

qmsystem2 (0.0.8) unstable; urgency=low
  [ Pia Niemela ]
  * Fixes: NB#205367 - mod to qmsensor's destructor 

  [Yang Yang]
  * Add testGetBatteryCondition

  [Matias Muhonen]
  * Fixes: NB#205929 - Get rid of /proc/component_version and /proc/bootreason files
  * Fixes: NB#205080 - Add usb_moded error message signal handling to QT api

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Mon, 22 Nov 2010 13:50:19 +0200

qmsystem2 (0.0.7) unstable; urgency=low

  [Matias Muhonen]
  * Improve bluetooth headset detection