@@ -31,7 +31,7 @@
 #define QMACTIVITY_P_H
 
 #include "qmactivity.h"
-#include "qmipcinterface.h"
+#include "qmipcinterface_p.h"
 
 #if HAVE_MCE
     #include "mce/dbus-names.h"
